src/objects/MT_MediaMotive__c.object
<CustomObject>
    <fields>
        <fullName>MT_AdvertisedMediaProduct_ref__c</fullName>
        <label>Advertised Media Product</label>
        <referenceTo>MT_AdvertisedMediaProduct__c</referenceTo>
        <relationshipLabel>Media Motives</relationshipLabel>
        <relationshipName>MT_MediaMotives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_AgencyProductNumber__c</fullName>
        <label>Agency Product Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT_GEMA__c</fullName>
        <label>GEMA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT_IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_SpotLength__c</fullName>
        <label>Spot Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT_UploadID__c</fullName>
        <label>Upload ID</label>
        <type>TextArea</type>
    </fields>
    <label>Media Motive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Motive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Motives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>